--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,17 +162,17 @@
             <!--android:label="@string/auth"-->
             <!--android:screenOrientation="portrait" />-->
 
-        <!--<meta-data-->
-            <!--android:name="com.facebook.sdk.ApplicationId"-->
-            <!--android:value="@string/fb_app_id" />-->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/fb_app_id" />
         <activity
             android:name=".profile.gui.activity.ChildrenBirthdaysActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <!--<meta-data-->
-            <!--android:name="com.facebook.sdk.ApplicationId"-->
-            <!--android:value="@string/fb_app_id" />-->
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/fb_app_id" />
 
         <activity
             android:name="ru.mos.polls.offer.OfferActivity"
@@ -472,7 +472,7 @@
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/>
 
-        <service android:name=".social.service.PostingService" />
+        <!--<service android:name=".social.service.PostingService" />-->
 
         <service
             android:name=".geotarget.job.GeotargetJobService"
