--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:installLocation="auto">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <permission
@@ -29,9 +29,10 @@
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
-    <uses-feature android:name="android.hardware.camera.any"/>
-    <uses-feature android:name="android.hardware.camera.autofocus"
-                  android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.any" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
 
     <application
         android:name="ru.mos.polls.AGApplication"
@@ -113,58 +114,7 @@
                     android:scheme="iSuperCitizen" />
             </intent-filter>
         </activity>
-        <!--<activity-->
-            <!--android:name=".social.auth.SocialAuthActivity"-->
-            <!--android:configChanges="orientation|screenSize"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:theme="@style/AppTheme.NoActionBar" />-->
-        <!--<activity-->
-            <!--android:name="ru.ok.android.sdk.OkAuthActivity"-->
-            <!--android:configChanges="orientation|screenSize"-->
-            <!--android:launchMode="singleTask"-->
-            <!--android:screenOrientation="portrait">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
 
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<category android:name="android.intent.category.BROWSABLE" />-->
-
-                <!--<data-->
-                    <!--android:host="ok1078245120"-->
-                    <!--android:scheme="okauth" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-        <!--<activity-->
-            <!--android:name="ru.mos.polls.social.auth.TwAuthActivity"-->
-            <!--android:configChanges="orientation|screenSize"-->
-            <!--android:launchMode="singleTask"-->
-            <!--android:screenOrientation="portrait">-->
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
-
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--<category android:name="android.intent.category.BROWSABLE" />-->
-
-                <!--<data-->
-                    <!--android:host="callback"-->
-                    <!--android:scheme="x-oauthflow-twitter" />-->
-            <!--</intent-filter>-->
-        <!--</activity>-->
-
-        <!--<activity-->
-            <!--android:name="com.facebook.FacebookActivity"-->
-            <!--android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
-            <!--android:label="@string/app_name"-->
-            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar" />-->
-        <!--<activity-->
-            <!--android:name="ru.mos.polls.social.auth.FbAuthActivity"-->
-            <!--android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
-            <!--android:label="@string/auth"-->
-            <!--android:screenOrientation="portrait" />-->
-
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/fb_app_id" />
         <activity
             android:name=".profile.gui.activity.ChildrenBirthdaysActivity"
             android:screenOrientation="portrait"
@@ -289,18 +239,6 @@
             android:name="com.vk.sdk.VKServiceActivity"
             android:label="ServiceActivity"
             android:theme="@style/VK.Transparent" />
-
-        <!--<activity-->
-            <!--android:name=".social.auth.VkAuthActivity"-->
-            <!--android:configChanges="orientation|screenSize"-->
-            <!--android:label="@string/auth"-->
-            <!--android:screenOrientation="portrait" />-->
-
-        <!--<activity-->
-            <!--android:name=".social.auth.GpAuthActivity"-->
-            <!--android:configChanges="orientation|screenSize"-->
-            <!--android:label="@string/auth"-->
-            <!--android:screenOrientation="portrait" />-->
 
         <activity
             android:name=".subscribes.gui.SubscribeActivity"
@@ -450,7 +388,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <!--<activity android:name="ru.ok.android.sdk.OkPostingActivity" />-->
 
         <activity
             android:name="ru.mos.polls.tutorial.TutorialActivity"
@@ -470,9 +407,8 @@
 
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+            android:theme="@style/Base.Theme.AppCompat" />
 
-        <!--<service android:name=".social.service.PostingService" />-->
 
         <service
             android:name=".geotarget.job.GeotargetJobService"
