--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         android:label="@string/app_name"
         android:logo="@drawable/ic_launcher_v230"
         android:theme="@style/AppTheme"
+        tools:node="merge"
         tools:replace="theme,icon">
         <activity
             android:name="ru.mos.polls.SplashActivity"
