--- a/app/build.gradle
+++ b/app/build.gradle
@@ -148,12 +148,13 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     //noinspection AndroidLintGradleCompatible
     compile 'com.android.support:multidex:1.0.1'
-    compile 'com.android.support:support-v4:26.1.0'
+//    compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:support-compat:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:support-annotations:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
+//    compile 'com.android.support:recyclerview-v7:26.1.0'
 
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.google.android.gms:play-services-analytics:11.0.4'
@@ -168,7 +169,9 @@ dependencies {
     /**
      * Библиотека mos_social для работы с соцсетями
      */
-    compile(name: 'mos_social_0.1.86', ext: 'aar')
+    compile(name: 'mos_social_0.1.86', ext: 'aar') {
+        exclude module: 'support-v4'
+    }
     compile 'com.twitter.sdk.android:twitter:3.0.0'
     compile 'com.twitter.sdk.android:tweet-ui:3.0.0'
     compile 'com.twitter.sdk.android:twitter-core:3.0.0'
