--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ repositories {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
@@ -146,15 +146,13 @@ dependencies {
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
     compile 'com.jakewharton:butterknife:8.2.1'
-    //noinspection AndroidLintGradleCompatible
     compile 'com.android.support:multidex:1.0.1'
-//    compile 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:support-compat:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:support-annotations:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-//    compile 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-annotations:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
 
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.google.android.gms:play-services-analytics:11.0.4'
