--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -329,7 +329,7 @@
         </activity>
 
         <activity
-            android:name=".innovation.gui.activity.InnovationActivity"
+            android:name=".innovations.ui.activity.InnovationActivity"
             android:configChanges="orientation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
