--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ jdk: oraclejdk8
 env:
   global:
     - ANDROID_API_LEVEL=23
+    - EMULATOR_API=23
     - ANDROID_BUILD_TOOLS_VERSION=25.0.0
-    - ANDROID_ABI=google_apis/armeabi-v7a
     - ANDROID_TAG=google_apis
     # wait up to 60 minutes for adb to connect to emulator
     - ADB_INSTALL_TIMEOUT=60
@@ -17,9 +17,12 @@ android:
     - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
-    - android-22
-    - addon-google_apis-google-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API
+    - addon-google_apis-google-$ANDROID_API_LEVEL # google play services
+    - extra-android-m2repository # for design library
     - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-android-$EMULATOR_API_LEVEL # the fix!
     - add-on
     - extra
 
@@ -38,8 +41,11 @@ cache:
     - $HOME/.gradle
 
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-audio -no-window &
+  - echo "y" | android update sdk -a --no-ui --filter android-23
+  - echo "y" | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-android-23
+  - android list targets | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # list all targets
+  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
