--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ env:
     - EMULATOR_API=23
     - ANDROID_BUILD_TOOLS_VERSION=25.0.0
     - ANDROID_TAG=google_apis
+    - ANDROID_ABI=armeabi-v7a
     # wait up to 60 minutes for adb to connect to emulator
     - ADB_INSTALL_TIMEOUT=60
+    - QEMU_AUDIO_DRV=none # Remove audio
 
 android:
   components:
@@ -55,7 +57,7 @@ before_script:
   - echo "y" | android update sdk -a --no-ui --filter android-23
   - echo "y" | android update sdk -a --no-ui --filter sys-img-armeabi-v7a-android-23
   - android list targets | grep -E '^id:' | awk -F '"' '{$1=""; print $2}' # list all targets
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi google_apis/$ANDROID_ABI
   - emulator -avd test -no-skin -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
