--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ env:
   global:
     - ANDROID_API_LEVEL=23
     - EMULATOR_API=23
-    - ANDROID_BUILD_TOOLS_VERSION=25.0.0
     - ANDROID_TAG=google_apis
     - ANDROID_ABI=armeabi-v7a
     # wait up to 60 minutes for adb to connect to emulator
@@ -17,9 +16,8 @@ env:
 android:
   components:
     - tools # to get the new `repository-11.xml`
+    - build-tools-25.0.3
     - platform-tools
-    - tools # to install Android SDK tools 25.1.x
-    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
     - android-$EMULATOR_API
     - addon-google_apis-google-$ANDROID_API_LEVEL # google play services
