--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+sudo: false
 
 language: android
 jdk: oraclejdk8
@@ -43,9 +43,12 @@ android:
 before_install:
   - yes | sdkmanager "platforms;android-25"
 
+install: travis_wait 30 mvn install
+
 notifications:
   email:
     - elizarov1988@gmail.com
+    - matek3022@gmail.com
 #    - sklyarovdv@mos.ru
 #    - fastsilver2009@gmail.com
 
