--- a/.travis.yml
+++ b/.travis.yml
@@ -143,7 +143,7 @@ env:
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
-    
+
 notifications:
   email:
 #    - elizarov1988@gmail.com
@@ -178,4 +178,4 @@ before_script:
   - android-wait-for-emulator
 
 script:
-  - ./gradlew clean check connectedCheck connectedAndroidTest -x library:signArchives -PdisablePreDex
+  - ./gradlew clean check connectedCheck connectedAndroidTest
